# lambda-dummy-image

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: apply.yml  codeql.yml  plan.yml  pylint.yml  tfsec.yml
src/: main.py
terraform/: .terraform.lock.hcl  backend.tf  backend.tfvars.example  main.tf  output.tf  variables.tf  versions.tf
